--- a/app/src/main/res/layout/content_request_row.xml
+++ b/app/src/main/res/layout/content_request_row.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         card_view:cardCornerRadius="1dp"
+        android:layout_margin="4dp"
         >
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,25 +17,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/list_requests_dominio"
-        android:text="Hola"
         android:layout_marginLeft="16dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="36dp"
             android:src="@drawable/ic_reply_black_24dp"
             android:id="@+id/list_request_response"
             android:layout_marginRight="16dp"
             android:layout_alignTop="@+id/list_request_cancel"
-            android:layout_toStartOf="@+id/list_request_cancel" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_toStartOf="@+id/list_request_cancel"
+            android:background="@drawable/ripple"/>
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="36dp"
             android:src="@drawable/ic_clear_black_24dp"
             android:id="@+id/list_request_cancel"
             android:layout_marginRight="16dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/ripple"/>
     </RelativeLayout>
     </android.support.v7.widget.CardView>
