--- a/app/src/main/res/layout/fragment_content_requests.xml
+++ b/app/src/main/res/layout/fragment_content_requests.xml
@@ -3,12 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list_requests"
-        android:dividerHeight="0dp"
-        android:divider="@color/white"
-        />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
