--- a/app/src/main/res/layout/content_request_row.xml
+++ b/app/src/main/res/layout/content_request_row.xml
@@ -9,6 +9,7 @@
         android:layout_height="100dp"
         card_view:cardCornerRadius="1dp"
         android:layout_margin="4dp"
+        android:background="@drawable/ripple"
         >
     <RelativeLayout
         android:layout_width="match_parent"
