--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -39,11 +39,10 @@
             android:layout_gravity="left|start"
             android:id="@+id/navigation_drawer">
 
-            <fragment android:id="@+id/navigation_drawer_fragment"
+            <FrameLayout android:id="@+id/navigation_drawer_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
-                android:name="es.davilag.passtochrome.drawer.DrawerFragment"
                 tools:layout="@layout/fragment_navigation_drawer"/>
         </RelativeLayout>
     </android.support.v4.widget.DrawerLayout>
