--- a/app/src/main/res/layout/content_request_row.xml
+++ b/app/src/main/res/layout/content_request_row.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentStart="true" />
         <ImageButton
             android:layout_width="48dp"
-            android:layout_height="36dp"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_reply_black_24dp"
             android:id="@+id/list_request_response"
             android:layout_marginRight="16dp"
@@ -32,7 +32,7 @@
             android:background="@drawable/ripple"/>
         <ImageButton
             android:layout_width="48dp"
-            android:layout_height="36dp"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_clear_black_24dp"
             android:id="@+id/list_request_cancel"
             android:layout_marginRight="16dp"
