--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -18,6 +18,18 @@
         <item name="android:colorAccent">#ef6c00</item>
         <item name="android:colorControlActivated">#ef6c00</item>
     </style>
+
+    <style name="normalActivity" parent="Base.ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="android:colorPrimaryDark">#e65100</item>
+        <item name="color">@android:color/white</item>
+        <item name="android:layout_height">?android:actionBarSize</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:colorPrimary">#ef6c00</item>
+        <item name="android:colorAccent">#ef6c00</item>
+        <item name="android:colorControlActivated">#ef6c00</item>
+    </style>
+
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@android:color/white</item>
