--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,13 +1,14 @@
-<LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:foreground="#4000">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/abc_search_url_text_normal"
+        android:layout_height="168dp"
+        android:background="@drawable/username_background"
         android:id="@+id/drawer_email_container"
         android:orientation="vertical"
         android:gravity="bottom"
@@ -18,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:id="@+id/drawer_email"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/white"/>
         </LinearLayout>
     <ListView
         android:layout_width="match_parent"
