--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="orange" type="color">#ef6c00</item>
+    <item name="darkOrange" type="color">#e65100</item>
     <item name="black" type="color">#000000</item>
     <item name="white" type="color">#FFFFFF</item>
     <item name="row_grey" type="color">#eeeeee</item>
