--- a/app/src/main/res/layout/content_container_row.xml
+++ b/app/src/main/res/layout/content_container_row.xml
@@ -14,6 +14,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:background="@drawable/circle_container"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="16dp"
+            android:textAlignment="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="D"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:textSize="25dp"
+                android:id="@+id/inicial_fila"
+                android:textColor="@color/white"/>
+            </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,16 +40,15 @@
             android:text="Dominio"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="72dp"
             android:layout_marginTop="27dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/list_container_user"
-            android:layout_marginLeft="32dp"
+            android:layout_marginLeft="72dp"
             android:text="Usuario"
             android:layout_below="@+id/list_container_dominio"
-            android:layout_alignStart="@+id/list_container_dominio"
             android:layout_marginTop="12dp"/>
         <ImageButton
             android:layout_width="48dp"
