--- a/app/src/main/res/layout/dialog_editar.xml
+++ b/app/src/main/res/layout/dialog_editar.xml
@@ -3,11 +3,31 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <EditText
+        android:id="@+id/dom_mod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:fontFamily="sans-serif"
+        android:hint="Contraseña dominio" />
+    <EditText
+        android:id="@+id/user_mod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        android:fontFamily="sans-serif"
+        android:hint="Contraseña contenedor"/>
+    <EditText
         android:id="@+id/pass_dom"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
